# PiScript

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  notes.md  test.lox
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml  container.yml  gh-pages.yml  jekyll-gh-pages.yml
cmake/: AddCMockaTest.cmake
docs/: index.html  index.md
docs/assets/layouts/: default.html
docs/assets/scss/: fonts.scss  styles.scss
docs/getting_started/: installation.md  quickstart.md
docs/language/: basic_syntax.md  datatypes.md
language-tests/array/: get_array_index_no_number.lox  get_index_out_of_bounds.tox  get_property_access_on_no_array.tox  init.lox  property_access.tox  set_array_index_no_number.lox  set_index_out_of_bounds .lox  set_property_access_on_no_array.lox
language-tests/assignment/: const.lox  undefined.lox
language-tests/class/: empty.lox  local_inherit_other.lox  local_reference_self.lox.tox  reference_self.lox
language-tests/const/: duplicate_local.lox  in_middle_of_block.lox.tox  in_nested_block.lox  redeclare_global.lox.tox  redefine_global.lox.tox  scope_reuse_in_different_blocks.lox.tox  shadow_and_local.lox  shadow_global.lox.tox  uninitialized.lox.tox  use_false_as_var.lox.tox  use_global_in_initializer.lox.tox  use_local_in_initializer.lox.tox  use_nil_as_var.lox  use_this_as_var.lox.tox
language-tests/constructor/: call_init_early_return.lox  call_init_explicitly.lox  default.lox  early_return.lox.tox  return_in_nested_function.lox.tox
language-tests/for/: statement_condition.lox  statement_initializer.lox  syntax.lox
language-tests/function/: local_mutual_recursion.lox
language-tests/number/: decimal_point_at_eof.lox  trailing_dot.lox
language-tests/operator/: not.lox
language-tests/regression/: 394.lox  40.lox
language-tests/require/: modules_are_signletons.tox  require_types.tox
language-tests/require/singleton/: mutator.lox  singleton.lox
language-tests/require/types/: class.lox  instance.lox  number.lox  string.lox
language-tests/string/: error_after_multiline.lox
language-tests/super/: reassign_superclass.lox.tox
language-tests/this/: nested_class.lox
language-tests/variable/: undefined_global.lox  undefined_local.lox
src/: CMakeLists.txt  chunk.c  chunk.h  common.h  compile.c  compiler.c  compiler.h  empty.c  main.c  natives.c  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/chunk/: chunk.c  chunk.h  chunkDefs.h  sourceinfo.c  sourceinfo.h
src/util/: CMakeLists.txt  LocalVarArray.c  LocalVarArray.h  VarArray.c  VarArray.h  addresstable.c  addresstable.h  debug.c  debug.h  memory.c  memory.h  util.c  util.h
src/values/: natives.c  natives.h  object.c  object.h  value.c  value.h
test/: CMakeLists.txt  chunk.c  empty.c  memory.c  test.h  tests.zig  value.c  value.zig
test/chunk/: chunk.c  sourceinfo.c
test/e2e/: example.pi
test/util/: memory.c
test/wrappers/: realloc_wrapper.c
tool/: pubspec.yaml
tool/lib/src/: code_syntax.dart  grammar.dart  highlighter.dart  mustache.dart  page.dart  rule.dart  text.dart  website.dart
